--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -29,8 +29,10 @@ h4:hover{
 .recipe-name{
     text-align: center;
 }
+
 .modal-body{
     font-size: 110%;
+     text-align: center;
 }
 
 .modal-text{
@@ -69,3 +71,8 @@ a:hover {
 a:active { 
  color: white;
 }
+
+a{
+    target-name:new;
+    target-new:tab;
+} 
