--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -24,7 +24,7 @@
                         <p> <%=recipe[:ingredients_count]%> ingredientes</p>
                         
                         <div class="span4 proj-div" ></div>
-                        <button type="button" class="btn btn-primary"><%= link_to recipe['label'], "Ver Receita", data: {:style=>'color:#FFFFFF;', :class => "css_class", toggle: "modal", target: "#modal#{i}"} %></button>
+                        <button type="button" class="btn btn-primary"><%= link_to "Ver Receita", "#", data: {:style=>'color:#FFFFFF;', :class => "css_class", toggle: "modal", target: "#modal#{i}"} %></button>
                         <div id="modal<%= i %>" class="modal fade" role="dialog">
                            <div class="modal-dialog modal-md">
                               <div class="modal-content">
