Pagina de buscas de receitas carregando quais receitas já são favoritas + Favoritar receitas + Botões Favoritar/Desfavoritar + Requisicao Desfavoritar que não faz nada ainda

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -70,3 +70,15 @@ a{
     target-name:new;
     target-new:tab;
 } 
+
+.favorite_btn{
+    margin-left: 5px;
+}
+
+.unfav_button_hidden{
+    display: none;
+}
+
+.fav_button_hidden{
+    display: none;
+}
