ingredients and favorites statistics

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -4,7 +4,7 @@
         <span class="info-box-icon bg-green"><i class="fa fa-shopping-cart"></i></span>
         <div class="info-box-content">
           <span class="info-box-text">Ingredientes</span>
-          <span class="info-box-number numero-maior">25</span>
+          <span class="info-box-number numero-maior"><%=@ingredients_count %></span>
         </div><!-- /.info-box-content -->
       </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -13,7 +13,7 @@
         <span class="info-box-icon bg-aqua"><i class="fa fa-book"></i></span>
         <div class="info-box-content">
           <span class="info-box-text">Receitas Buscadas</span>
-          <span class="info-box-number numero-maior">52</span>
+          <span class="info-box-number numero-maior">0</span>
         </div><!-- /.info-box-content -->
       </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -31,7 +31,7 @@
         <span class="info-box-icon bg-yellow"><i class="fa fa-star-o"></i></span>
         <div class="info-box-content">
           <span class="info-box-text">Favoritos</span>
-          <span class="info-box-number numero-maior">11</span>
+          <span class="info-box-number numero-maior"><%=@favorites_count %></span>
         </div><!-- /.info-box-content -->
       </div><!-- /.info-box -->
     </div><!-- /.col -->
