--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -213,7 +213,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="image">
-					<img src="http://inhabitat.com/wp-content/blogs.dir/1/files/2015/10/The-R%C3%B6nesans-Mecidiyek%C3%B6y-Office-by-Muum-1.jpg" class="img-responsive">
+					<img src="<%= asset_path 'chef.jpg' %>" class="img-responsive">
 				</div>
 			</div>
     	</div>
