Inserção da view de selecionar ingredientes

--- a/app/assets/stylesheets/ingredients.scss
+++ b/app/assets/stylesheets/ingredients.scss
@@ -28,3 +28,26 @@ table{
     font-size: 150%;
     text-align: center;
 }
+
+.search-title{
+    text-align: left;
+    padding-left: 4em;
+    font-size: 1.1em;
+}
+
+.hr-margin {
+    margin: 10px;
+}
+
+.sem-negrito {
+    font-weight: normal;
+}
+
+.padding-4 {
+    padding-left: 4em !important;
+}
+
+.botao-busca{
+    text-align: center;
+    margin-top: 20px;
+}
