Mudanças no header e na sidebard pra usarem uma imagem default quando o user não tiver foto

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -1,4 +1,10 @@
 <div class="row">
+<section class="content-header">
+  <h1>
+    Dashboard
+  </h1>
+  <br>
+</section>
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="info-box">
         <span class="info-box-icon bg-green"><i class="fa fa-shopping-cart"></i></span>
