--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -26,7 +26,7 @@
           <!-- Menu Toggle Button -->
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <!-- The user image in the navbar-->
-           <img src="<%= current_user.profile_image_url %>" class="user-image" alt="User Image"/>
+           <img src="<%= current_user.profile_image_url.present? ? current_user.profile_image_url : 'http://www.collegecasts.com/wp-content/uploads/2013/11/no-pic.jpg' %>" class="user-image" alt="User Image"/>
             <!-- hidden-xs hides the username on small devices so only the image appears. -->
             <% if current_user %>
             <span class="hidden-xs"><%= current_user.name %></span>
