--- a/app/views/recipes/search.html.erb
+++ b/app/views/recipes/search.html.erb
@@ -10,6 +10,7 @@
                     <p>Selecione os ingredientes para buscar receitas.</p>
                     <p>Você precisa selecionar <strong>no mínimo 2 e no máximo 20 ingredientes!</strong></p>
                 </div>
+                <%= form_tag({controller: "recipes", action: "index"}, method: :post, onsubmit: 'return validateForm()') do %>
                 <div class="box-body">
                     <% if @ingredients.first.nil? %>
                         <div class ='no-ingredient'>
@@ -27,10 +28,9 @@
                             </tr>
                         </thread>
                         <tbody>
-                        <%= form_tag({controller: "recipes", action: "index"}, method: :post, onsubmit: 'return validateForm()') do %>
                             <% @ingredients.each do |ingredient| %>
                             <tr>
-                                <td class="padding-4"><%= check_box_tag(ingredient.name, ingredient.name, false, class: 'padding-4') %></td>
+                                <td class="padding-4"><%= check_box_tag('ingredientes[]', ingredient.name, false, class: 'padding-4') %></td>
                                 <td><class="img"><%= image_tag("#{ingredient.picture}", :class => "img-ingredient") %> </class></td>
                                 <td><%= label_tag(ingredient.name, ingredient.name, class: 'sem-negrito') %></td>
                             </tr>
@@ -41,9 +41,9 @@
                 <div class="col-md-12 center-block">
                     <div class="span4 proj-div botao-busca">
                         <%= submit_tag("Buscar Receitas", class:"btn btn-primary", data: { disable_with: false }) %>
-                        <% end %>
                     </div>
                 </div>
+                <% end %>
             </div>
         </div>
     </div>
