fixing favorite url style and ingredients list

--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -11,6 +11,10 @@
     cursor: pointer; 
 }
 
-a{
-    color: black;
+.link, .link:visited , .link:active{
+    color: black !important;
+}
+
+.link:hover{
+    color: #3c8dbc !important;
 }
