favicon added to restrot. [#134445281]

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -222,7 +222,10 @@
 
 	<div class="footer">
   		<div class="container">
-   			<p class="text-muted">All Rights Reserved <a href="#">Restrot</a></p>
+   			<p class="text-muted">
+   			    Icon made by Freepik from <a href="www.flaticon.com">www.flaticon.com</a>.  
+   			    All Rights Reserved - <a href="#">Restrot</a>. 
+   			</p>
   		</div>
 	</div>
 
