--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -38,12 +38,13 @@
             <li class="user-header">
               <img src="<%= current_user.profile_image_url %>" class="img-circle" alt="User Image" />
               <p>
-                Alexander Pierce - Web Developer
-                <small>Member since Nov. 2012</small>
+                <%= current_user.name %>
+                <small>Usuário</small>
               </p>
             </li>
             <!-- Menu Body -->
             <li class="user-body">
+              <!--
               <div class="col-xs-4 text-center">
                 <a href="#">Followers</a>
               </div>
@@ -53,14 +54,15 @@
               <div class="col-xs-4 text-center">
                 <a href="#">Friends</a>
               </div>
+              -->
             </li>
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
-                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                <a href="<%= url_for(controller: 'preferences', action: 'profile', only_path: true) %>" class="btn btn-default btn-flat">Editar Perfil</a>
               </div>
               <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                <a href="<%= url_for(controller: 'session', action: 'logout', only_path: true) %>" class="btn btn-default btn-flat">Logout</a>
               </div>
             </li>
           </ul>
