--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -19,7 +19,7 @@
         <span class="info-box-icon bg-aqua"><i class="fa fa-calendar"></i></span>
         <div class="info-box-content">
           <span class="info-box-text">Último Acesso</span>
-          <span class="info-box-number"><%= @usuario.updated_at.strftime('%d/%m/%y, as %Hh%mmin') %></span>
+          <span class="info-box-number"><%= @user.updated_at.strftime('%d/%m/%y, as %Hh%mmin') %></span>
         </div><!-- /.info-box-content -->
       </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -28,7 +28,7 @@
         <span class="info-box-icon bg-red"><i class="fa fa-desktop"></i></span>
         <div class="info-box-content">
           <span class="info-box-text">Acessos</span>
-          <span class="info-box-number numero-maior"><%= @usuario.logins %></span>
+          <span class="info-box-number numero-maior"><%= @user.logins %></span>
         </div><!-- /.info-box-content -->
       </div><!-- /.info-box -->
     </div><!-- /.col -->
