change favicon.icon and corrects info

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -223,8 +223,8 @@
 	<div class="footer">
   		<div class="container">
    			<p class="text-muted">
-   			    Icon made by Freepik from <a href="www.flaticon.com">www.flaticon.com</a>.  
-   			    All Rights Reserved - <a href="#">Restrot</a>. 
+   			    Icon made by Freepik from <a target="_blank" href="http://www.flaticon.com/free-icon/chef-hat_100435#term=Chef&page=1&position=46">www.flaticon.com</a>.  
+   			    All Rights Reserved - <a>Restrot</a>. 
    			</p>
   		</div>
 	</div>
