Opção de desfavoritar disponível na lista de favoritas e na busca por receitas

--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -3,6 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .favorite_star{
+    i {
+        color: gold;
+    }
+    i:hover {
+        color: black;
+        cursor: pointer;
+    }
     text-align: center; 
     color: gold;
 }
